# confluence-mcp-server

./: .dockerignore  .gitignore  .mcp.json  DEPLOY_FROM_ARCHIVE.md  DOCKER_RUN.md  Dockerfile  EXTERNAL_CONSUMERS.md  LOCAL_ENVIRONMENTS.md  MARKDOWN_BRIDGE_PLAN.md  README.md
config/: app.yaml.example
confluence-client/: pyproject.toml
confluence-client/src/confluence_client/: __init__.py  client.py  exceptions.py  models.py
confluence-markdown-service/: pyproject.toml
confluence-markdown-service/src/confluence_markdown_service/: __init__.py  exceptions.py  exporter.py  importer.py  models.py  storage_normalizer.py  storage_renderer.py
confluence-mcp-server/: pyproject.toml  requirements-dev.txt  run_api.py  run_mcp_http.py
confluence-mcp-server/src/confluence_mcp/: __init__.py  __main__.py  api.py  mcp_server.py  runtime.py  server.py  tools.py
confluence-pagecreator-core/: pyproject.toml
confluence-pagecreator-core/src/confluence_pagecreator_core/: planner.py
confluence-pagecreator-core/tests/: test_path_parser.py
confluence-pagecreator-mcp-server/: pyproject.toml  requirements-dev.txt  run_api.py  run_mcp_http.py
confluence-pagecreator-mcp-server/src/confluence_pagecreator_mcp/: __init__.py  api.py  mcp_server.py  server.py
confluence-pagecreator-service/: pyproject.toml
confluence-pagecreator-service/src/confluence_pagecreator_service/: __init__.py  dto.py  exceptions.py  interfaces.py  models.py  path_parser.py  planner.py  secrets.py  service.py
pagecreator-core/: pyproject.toml
pagecreator-core/src/pagecreator_core/: __init__.py  exceptions.py  models.py  path_parser.py
pagecreator-core/tests/: test_path_parser.py
pagecreator-mcp-server/: pyproject.toml  requirements-dev.txt  run_api.py  run_mcp_http.py
pagecreator-mcp-server/src/pagecreator_mcp/: api.py  launch.py  mcp_server.py  runtime.py  server.py  tools.py
pagecreator-service/: pyproject.toml
pagecreator-service/src/pagecreator_service/: __init__.py  config.py  secrets.py  service.py
scripts/: run_mcp.sh
secrets/: confluence.yaml.example
skills/confluence-markdown-bridge/: SKILL.md
skills/pagecreator-structure/: SKILL.md
