[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-mcp-server"
version = "0.1.0"
description = "Общий MCP- и HTTP-сервер для сценариев работы с Confluence"
requires-python = ">=3.10"
dependencies = [
    "confluence-pagecreator-service",
    "confluence-markdown-service",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.28.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
