[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-pagecreator-service"
version = "0.1.0"
description = "Сервисный слой для создания страниц"
requires-python = ">=3.9"
dependencies = ["confluence-pagecreator-core", "confluence-client", "pydantic>=2.7", "PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
