[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagecreator-mcp-server"
version = "0.1.0"
description = "MCP-сервер для создания страниц"
requires-python = ">=3.10"
dependencies = [
    "pagecreator-service",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "mcp>=1.28.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
